# GD32E230xx_FreeRTOS_CMake

./: CMakeLists.txt  GD32E230K8_FLASH.ld  gd32e23x.cfg
Drivers/CMSIS/Device/GD/GD32E23x/Source/gcc/: startup_gd32e23x.s
include/: FreeRTOSConfig.h  gd32e23x_libopt.h
src/FreeRTOS/Source/portable/GCC/ARM_CM23_NTZ/non_secure/: portasm.c
